--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
 
     <!-- Edit meta tags for SEO -->
     <title>Shishira's Portfolio </title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
-
-    <!-- Open Graph / Facebook -->
+    <meta name="title" content="Shishira's Portfolio">
+    <meta name="description" content="My Software Developer Portfolio ">
+    Open Graph / Facebook
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://developerfolio.js.org/">
     <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
@@ -18,10 +17,10 @@
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
+    <!-- <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://developerfolio.js.org/">
     <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"> -->
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
